<resources>
    <string name="app_name">LoonyLiterature</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="about">This is a tic tac toe game to be played with friends</string>
    <string name="HomePageTitle">TextView</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>
    <string name="saved_stories">Saved Stories</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
</resources>
